--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           <li> <a href="https://brovarenko.github.io/excursion/">Excursion</a></li>
           <li> <a href="https://brovarenko.github.io/The-Tea-Cozy/">The Tea Cozy</a></li>
         </ul>
+        <h4 id="pro-list">HTML,CSS,JavaScript</h4>
+        <ul >
+          <li> <a href="https://youthful-blackwell-b3d932.netlify.app/">Excursion</a></li>
+          
+        </ul>
     </section>
     <section class="skills">
         <h2>Skills</h2>
