--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <li> <a href="https://youthful-blackwell-b3d932.netlify.app/">Chore door</a></li>
           <li> <a href="https://stoic-swirles-e6fa9d.netlify.app/">Web navigator</a></li>
           <li> <a href="https://reverent-wilson-2cdcca.netlify.app">Task list</a></li>
+          <li> <a href="https://sleepy-wozniak-360143.netlify.app">Appointment planner</a></li>
         </ul>
     </section>
     <section class="skills">
