--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         <p>Hey! I am Vladislav and at the moment I am studying web programming.</p>
     </section>
     <section class="projects">
-        <h2>Projects</h2>
-        <div>
-            <h4 id="pro-list-html" class="pro-list">HTML,CSS</h4>
-            <ul id="list-ul" >
-                <li> <a href="https://brovarenko.github.io/excursion/">Excursion</a></li>
-                <li> <a href="https://brovarenko.github.io/The-Tea-Cozy/">The Tea Cozy</a></li>
+        
+            <h4 id="pro-list-java" class="pro-list">Certifies</h4>
+            <ul >
+                <li> <a href="https://freecodecamp.org/certification/brovarenus/javascript-algorithms-and-data-structures">JavaScript Algorithms and Data Structures</a></li>
+                <li> <a href="https://www.efset.org/cert/nnfYcm">English</a></li>
             </ul>
-        </div>
-        <h4 id="pro-list-java" class="pro-list">Java Script</h4>
+        
+        <h4 id="pro-list-java" class="pro-list">Projects</h4>
         <ul >
           <li> <a href="https://youthful-blackwell-b3d932.netlify.app/">Chore door</a></li>
           <li> <a href="https://stoic-swirles-e6fa9d.netlify.app/">Web navigator</a></li>
           <li> <a href="https://reverent-wilson-2cdcca.netlify.app">Task list</a></li>
           <li> <a href="https://sleepy-wozniak-360143.netlify.app">Appointment planner</a></li>
+          <li> <a href="https://zen-shirley-05b7f4.netlify.app">Client for reddit</a></li>
         </ul>
     </section>
     <section class="skills">
