--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <a target="_blank" href="mailto:brovwg@gmail.com"><i class="far fa-envelope fa-3x"></i></a>
         </div>
     </section>
-
+        <script src="script.js"></script>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
