--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section id="certifies">
         <h1 class="project-tile">Profiles and certificates</h1>
         <div class="certifies-items">
-              <a target="_blank" href="https://www.freecodecamp.org/brovarenus">Free Code Camp</a>
+              <a target="_blank" href="https://www.freecodecamp.org/brovarenko">Free Code Camp</a>
                <a target="_blank" href="https://www.codecademy.com/profiles/Brovarenko">Codecademy</a>
                <a target="_blank" href=" https://www.codewars.com/users/Brovarenko">Codewars</a>
               <a target="_blank" href="https://www.efset.org/cert/nnfYcm">EF SET Certificate</a>
